[package]
name = "rust-learn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "general_struct"
path = "src/general_struct.rs"

[[bin]]
name = "tuple_struct"
path = "src/tuple_struct.rs"